# backspaceAlpha

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
backspaceAlpha/: __init__.py
backspaceAlpha/examples/: BuyAndHoldSPYStrategy.py  MeanReversionStrategy.py  PairsTradingStrategy.py  SMAMomentumStrategy.py  __init__.py
backspaceAlpha/framework/: __init__.py  backtest.py  broker.py  loader.py  strategy.py
backspaceAlpha/functions/: RollingDrawdown.py  RollingSharpeRatio.py  __init__.py
framework/: __init__.py  backtest.py  broker.py  loader.py  strategy.py
strategies/: BuyAndHoldSPYStrategy.py  MeanReversionStrategy.py  PairsTradingStrategy.py  RSIMomentumStrategy.py
test/: start.py  test.py
